<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yasmin_viewer</name>
  <version>5.1.0</version>
  <description>YASMIN viewer for FSM</description>
  <maintainer email="mgons@unileon.es">Miguel Ángel González Santamarta</maintainer>
  <license>GPL-3.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>ament_index_cpp</depend>
  <depend>boost</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>yasmin</depend>
  <depend>yasmin_ros</depend>
  <depend>yasmin_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
